@@ -1398,9 +1398,11 @@ No. & Reaction\tnote{(b)} & Forward          & Backward    & $A$, $\textrm{cm}^3
 ~\\
 
    { $\rm e^- +  N_2^+ \rightarrow   N+N  $   } &  \begin{minipage}[t]{0.3\textwidth}\raggedright  
-     2.9613,    5.7153,    9.1741,    9.8638,   12.3696,   14.9141
+         2.9613,    5.7153,    9.1741,    9.8638,   10.2874,   11.4501,   12.1489,   12.3696,   14.9141
+
  \end{minipage}  & \begin{minipage}[t]{0.3\textwidth}\raggedright 
-  -15.1097,  -15.6251, -16.9585,  -17.4851,  -18.7960,  -20.7233
+    -15.1097,  -15.6251,  -16.9585,  -17.4851,  -18.2694,  -18.4823,  -18.7176,  -18.7960,  -19.8070
+
 \end{minipage} \\
 ~\\
 
