@@ -333,6 +333,9 @@ static double _kf26b(np_t np, gl_t *gl, double Te){
     5.71525385948086,
     9.17412056693579,
     9.86376375536634,
+    10.2874072392099,
+    11.4501196047481,
+    12.1488911688257,
     12.3695988451580,
     14.9141228466324
   };
@@ -342,8 +345,11 @@ static double _kf26b(np_t np, gl_t *gl, double Te){
     -15.6250837536637,
     -16.9584559651989,
     -17.4850816245454,
+    -18.2694199501118,
+    -18.4823072424797,
+    -18.7176080892025,
     -18.7960420527258,
-    -20.7232658369464
+    -19.8069751050723
   };  
   int N = sizeof(Te_control)/sizeof(Te_control[0]);
   Te=min(Te_control[N-1],max(log( Te ),Te_control[0]));
